--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "ionicons": "3.0.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
+    "socket.io": "^1.4.8",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
@@ -40,5 +41,5 @@
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [],
-  "license":"MIT"
+  "license": "MIT"
 }
