--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Server per Scriba con Node JS, Express, NoSQL DB",
   "main": "server.js",
   "scripts": {
-    "test": "node server.js"
+    "test": "mocha ./test --recursive && jshint ."
   },
   "author": "Giuseppe Iaffaldano",
   "license": "MIT",
@@ -20,5 +20,10 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "socket.io": "^1.4.8"
+  },
+  "devDependencies": {
+    "jshint": "^2.9.5",
+    "chai": "^4.1.0",
+    "mocha": "^3.5.0"
   }
 }
