Missing comma in server package.json file. Fix issue #84

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "author": "Giuseppe Iaffaldano",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
     "test": "mocha ./test --recursive && jshint ."
   },
   "license": "MIT",
