--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
+    "socket.io-client": "^2.0.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
   },
